...
        const val DASHBOARD_ROUTE = "dashboard_route"
        const val SPLASH_ROUTE = "splash_route"
    }

    object TestTags {

        const val GENERIC_FAB_NAVIGATE = "GENERIC_FAB_NAVIGATE"
        const val GENERIC_FAB_ADD = "GENERIC_FAB_ADD"

        const val HI = "HI"
        const val YOUR_NAME_TEXT_FIELD = "YOUR_NAME_TEXT_FIELD"

        const val NOTE_CARD = "NOTE_CARD"
        const val JOURNAL_CARD = "JOURNAL_CARD"

        const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
        const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"

        const val NOTE_ITEM = "NOTE_ITEM"
        const val JOURNAL_ITEM = "JOURNAL_ITEM"

        const val BACK_PRESSED = "BACK_PRESSED"

        const val HORIZONTAL_PAGER = "HORIZONTAL_PAGER"
        const val VERTICAL_SCROLL = "VERTICAL_SCROLL"

        const val DELETE_YES_DIALOG = "DELETE_YES_DIALOG"
        const val MORE_VERT_CLICKED = "MORE_VERT_CLICKED"
...
